Working Shamir's Secret Sharing when publish to database
